--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "html-template-pdf": "^1.0.3",
     "http": "^0.0.1-security"
   }
 }
