--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "html-template-pdf": "^1.0.3",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "pdfkit": "^0.13.0"
   }
 }
